--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - pytorch
   - conda-forge
 dependencies:
-  - python=3.9
+  - python=3.10
   - pytorch=1.12.1
   - torchaudio
   - torchvision
@@ -14,3 +14,6 @@ dependencies:
     - scikit-learn
     - pandas
     - lightning
+    - bids
+    - nilearn
+    - nibabel
