Git ignore: removing older ignore lines.
Adding data/ dir to check out .npy files and not to track them

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 .idea
-/ethics/**/*.csv
-/ethics/**/*.txt
-/lightning_logs
-/src/lightning_logs
-models
 *.log
 __pycache__
-data/ethics
-data/ds000212
+data/
 artifacts/
