--- a/environment.yml
+++ b/environment.yml
@@ -20,4 +20,7 @@ dependencies:
   - nibabel
   - pybids
   - datalad
+  - python=3.10
+  - pyparsing
+  - httpcore[version='<=0.15']
 prefix: /home/art/.conda/envs/brain_bias
