--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
-transformers
-torch==1.13.1
+webdataset
 torchaudio
-torchvision
-#cudatoolkit==11.6
-pandas
-lightning[extra]  # for lightning, extra is for tensorboard support
-bids
-nilearn
 nibabel
-sympy
+pytorch
+pytorch-cuda
+pip
+tqdm
+conda
+pynvml
+setuptools
+nilearn
 numpy
+scikit-learn
+simple-parsing
+sentencepiece
+lightning
+pybids
+einops
+python=3.10
+wandb
+conda-content-trust
+ipywidgets
+transformers
+datasets
+wheel
+torchvision
+pyparsing
