Separating environments for cpu and cuda

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,23 @@
-webdataset
-torchaudio
+datasets
+datalad
+einops
+ipywidgets
+lightning
 nibabel
-pytorch
-pytorch-cuda
-pip
-tqdm
-conda
-pynvml
-setuptools
 nilearn
 numpy
-scikit-learn
-simple-parsing
-sentencepiece
-lightning
 pybids
-einops
-python=3.10
-wandb
-conda-content-trust
-ipywidgets
-transformers
-datasets
-wheel
-torchvision
+pynvml
 pyparsing
+scikit-learn
+sentencepiece
+setuptools
+simple-parsing
+torch
+torchaudio
+torchvision
+tqdm
+transformers
+wandb
+webdataset
+wheel
