(wip) fixing bug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceRoot}/src/main.py",
+            "args": ["--sampling_method", "SENTENCES"],
             "cwd": "${workspaceFolder}"
         }
     ]
