40, 43 - vast.ai infrastructure, dependencies (#31)
* 40, 43 - vast.ai infrastructure, dependencies

Changes:

- Updates list of dependencies for conda and pip
- Configures vast.ai provisioning
- Updates README with up to date info

* clean up

* save

* Separating environments for cpu and cuda

* save

* Vast.ai config

* save

* freezing version

* save

* save

* save

* Clean up README

* fix for tokenizers dep

* Fix for CUDA

* Simple script to provision faster

* save

* Freezing dependencies. GCP dockerfile ref

* Clean up

* Fix

* Activating env by default

* save

* save

* save

---------

Co-authored-by: Artyom K <Artyom K>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
-transformers
-torch==1.13.1
+datasets
+datalad
+einops
+ipywidgets
+lightning
+nibabel
+nilearn
+numpy==1.25.*
+pybids
+pynvml
+pyparsing
+scikit-learn
+sentencepiece
+setuptools
+simple-parsing
+torch == 2.0.*
 torchaudio
 torchvision
-#cudatoolkit==11.6
-pandas
-lightning[extra]  # for lightning, extra is for tensorboard support
-bids
-nilearn
-nibabel
-sympy
-numpy
+tokenizers>=0.13.3
+tqdm
+transformers == 4.31.*
+wandb
+webdataset
+wheel
