--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceRoot}/src/main.py",
-            "args": ["--only_train_heads", "True"],
+            "args": [],
             "cwd": "${workspaceFolder}"
         }
     ]
