59 - Chaining training, metrics
This adds ability to chain training procedures via loading weights into
Lightning module and heads. If model state doesn't match to the checkpoint
weights, only a warning shown. Also now several metrics are calculated per
datasets.

https://app.asana.com/0/1204113211080833/1205539015488627/f

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,24 @@
             "program": "${workspaceRoot}/src/main.py",
             "args": [],
             "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Launch-Checkpoint",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceRoot}/src/main.py",
+            "args": [
+                "--to_save_model",
+                "--max_epochs",
+                "1",
+                "--ds1.train.slicing",
+                "[:10]",
+                "--ds2.train.slicing",
+                "[:10]",
+                "--checkpoint_path",
+                "artifacts/model-2023-09-20T1649.ckpt"
+            ],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
