--- a/environment-cpu.yml
+++ b/environment-cpu.yml
@@ -1,13 +1,15 @@
 channels:
   - r
   - pytorch
+  - huggingface
+  - conda-forge
   - defaults
 dependencies:
   - datalad
   - einops
   - conda-forge::datasets
-  - conda-forge::transformers == 4.31.*
-  - conda-forge::tokenizers => 0.13.3
+  - conda-forge::transformers==4.31.*
+  - conda-forge::tokenizers=>0.13.3
   - ipywidgets
   - lightning
   - nibabel
@@ -16,16 +18,16 @@ dependencies:
   - pybids
   - pynvml
   - pyparsing
-  - pytorch::pytorch == 2.0.*
+  - pytorch::pytorch==2.0.*
   - pytorch::torchaudio
   - pytorch::torchvision
+  - torchmetrics
   - scikit-learn
   - sentencepiece
   - setuptools
   - simple-parsing
   - tqdm
   - wandb
-  - webdataset
   - wheel
   - python=3.10
   - pip
